# PixelBytes

./: Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  tests.py
data/control/: simulation_results.csv
docs/: PixelBytesVQ.ipynb  actionpixelbytes-best-train.ipynb  actionpixelbytes-testcontrol.ipynb  bis-mamba-train.ipynb  bys-mamba-model+data.ipynb  bys_mamba_model.ipynb  mamba-bidirectionnal.ipynb  pixelbytes-eval-compare.ipynb  pixelbytes-train-compare.ipynb
docs/paper/: Readme.md  article.aux  article.bbl  article.blg  article.out  article.tex  references.bib
docs/versions/: bis-mamba-train.ipynb  pixelbytes-eval-compare.ipynb
mamba_bis/: mambabis.py  mambalm.py  ssm.py
mamba_bys/: dataset.py  mambabys.py  othello.py  pokemon.py  train.py
model/: checkpoint_epoch_4.pth  checkpoint_epoch_9.pth
models/: training_results_rnn_bi_pxby_noconv_81-dim_64-state_2-layer_PixelBytes-Pokemon.csv  vocab.txt
models/CONTROL/: training_metrics_autoregressive.csv  training_metrics_bi-ardm.csv  training_metrics_diffusion.csv
models/LSTM/: training_metrics_autoregressive.csv  training_metrics_autoregressive2.csv  training_metrics_predictive.csv
models/SimpleSeqModel_PixelBytes-Pokemon/: best_model.pth  best_test_model.pth  last_model.pth  training_results.csv
models/unnamed_unnamed/: best_model_unnamed_unnamed.pth  (+2 more)
pixelbytes/: .env  __init__.py  config.py  control.py  controll.py  controls.py  controlt.py  dataset.py  display.py  displays.py  eval.py  generator.py  main.py  model.py  pokemon.py  results.py  stream.py  tokenizer.py  train.py
(+43 files in other folders)
