[tool.poetry]
name = "mamba-bis"
version = "0.1.0"
description = ""
authors = ["fabienfrfr <fabien.furfaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^2.0"

[tool.poetry.extras]
caching = ["causal-conv1d","mamba-ssm"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
