[tool.poetry]
name = "pixelbytes"
version = "0.1.0"
description = ""
authors = ["fabienfrfr <fabien.furfaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^2.0"
mambapy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
